docs: make MkDocs site user-focused
- Diverge docs/index.md from README.md (remove dev content)
- Add docs/LICENCE.md, remove docs/contributing.md
- Update links: vyruss → pgEdge, DATA.md → docs/data.md
- Update mkdocs.yml navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,5 +52,5 @@ repo_url: https://github.com/pgEdge/radar
 nav:
   - Introduction: index.md
   - Data Reference: data.md
-  - Contributing: contributing.md
   - Changelog: changelog.md
+  - License: LICENCE.md
